# Opencv_aruco_demo_cpp

./: CMakeLists.txt  README.md  main.cpp  opencv_test.py
